# cleanmydeepin

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  cleanmydeepin.desktop  qml.qrc
.cursor/rules/: coding-rules.mdc
.github/workflows/: build.yml
.specstory/history/: 2025-05-16_06-56-丰富-prd-文档的内容.md  2025-05-16_07-38-项目设计文档生成与技术选型.md  2025-05-16_07-43-生成项目代码的讨论.md  2025-05-16_07-57-cmake-target-naming-and-linking-issues.md  2025-05-16_08-11-qml-layout-and-color-issues.md  2025-05-16_08-44-补全-scanmanager-实现.md  2025-05-16_08-53-补充linux和deepin系统扫描目录.md  2025-05-16_09-56-修改代码以树形展示扫描结果.md  2025-05-16_10-48-dynamic-treeview-data-loading-in-qml.md  2025-05-19_02-59-qt-数据结构与文件系统树形结构.md  2025-05-22_12-29-重新实现扫描逻辑和数据结构.md  2025-05-22_12-39-实现节点展开折叠与选择功能.md  2025-05-22_13-07-节点展开效果问题讨论.md  2025-05-22_13-37-全选功能性能与界面问题讨论.md  2025-05-23_01-58-修复子节点全选问题.md  2025-05-24_09-33-git-attributes-ignore-specstory-files.md  2025-05-24_09-39-项目文档更新与核心设计.md  2025-05-25_14-26-添加单元测试覆盖的讨论.md  2025-05-26_14-51-node-expand-collapse-issue-fix.md  2025-05-27_13-21-修改-qml-树状结构为-treeview.md  2025-05-28_15-37-模拟文件删除实现与日志记录.md  2025-05-28_16-24-添加-github-workflow-构建二进制.md  2025-05-28_16-42-添加debian目录以支持deb打包.md  2025-05-29_13-40-添加图标资源到主题.md  2025-06-10_15-03-修改扫描界面设计.md
debian/: changelog  control  install  rules
docs/: DESIGN.md  PRD.md  TESTING.md  TODOs.md  设计文档.md
qml/: CleanPage.qml  FileTreeItem.qml  HelpPage.qml  MainWindow.qml  ScanPage.qml  SettingsPage.qml
qml/components/: FileTreeItem.qml  TreeNodeDelegate.qml
src/: main.cpp
src/core/: cleanmanager.cpp  cleanmanager.h  configmanager.cpp  configmanager.h  scanmanager.cpp  scanmanager.h  translator.cpp  translator.h
src/log/: logger.cpp  logger.h
tests/: CMakeLists.txt  README.md  run_tests.sh  test_cleanmanager.cpp  test_configmanager.cpp  test_integration.cpp  test_logger.cpp  test_scanmanager.cpp
tests/testdata/: README.md
tests/testdata/sample_files/: test.txt
